# get_wp

./: .README.md.swp  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release-drafter.yml  test.yml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: get_wp.console.imports  tests.test_console.imports  tests.test_wikipedia.imports
.pytype/pyi/: noxfile.pyi
.pytype/pyi/get_wp/: console.pyi  wikipedia.pyi
.pytype/pyi/tests/: conftest.pyi  test_console.pyi  test_wikipedia.pyi
docs/: conf.py  index.rst  reference.rst
src/get_wp/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
