[tool.poetry]
name = "get_wp"
version = "0.1.0"
description = "experimental fetch and manipulation of text from wikipedia"
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/SteveRutledge/get_wp"
repository = "https://github.com/SteveRutledge/get_wp"
keywords = ["wikipedia"]
authors = ["Steve <44811980+SteveRutledge@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
get_wp= "get_wp.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

