[tool.poetry]
name = "get_wp"
version = "0.1.0"
description = "experimental fetch and manipulation of text from wikipedia"
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/SteveRutledge/get_wp"
repository = "https://github.com/SteveRutledge/get_wp"
keywords = ["wikipedia"]
authors = ["Steve <44811980+SteveRutledge@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.1"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"

[tool.poetry.scripts]
get_wp= "get_wp.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["get_wp"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
